
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int gboolean ;



__attribute__((used)) inline static gboolean is_separator (char c)
{
    return (c == '/' || c == '\\');
}
